Fix unauthorized-container width on mobile devices

--- a/src/components/dashboard/DashboardComponent.css
+++ b/src/components/dashboard/DashboardComponent.css
@@ -38,7 +38,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 52px);
     color: white;
     background: black;
